@@ -11,7 +11,7 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
-*/
+ */
 
 package org.drools.compiler.builder.impl;
 
@@ -23,6 +23,7 @@ import java.io.Reader;
 import java.io.StringReader;
 import java.io.UncheckedIOException;
 import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
@@ -33,7 +34,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -80,6 +80,7 @@ import org.drools.compiler.compiler.RuleBuildError;
 import org.drools.compiler.compiler.ScoreCardFactory;
 import org.drools.compiler.compiler.TypeDeclarationError;
 import org.drools.compiler.compiler.xml.XmlPackageReader;
+import org.drools.compiler.kie.builder.impl.BuildContext;
 import org.drools.compiler.lang.ExpanderException;
 import org.drools.compiler.lang.descr.AbstractClassTypeDeclarationDescr;
 import org.drools.compiler.lang.descr.AccumulateImportDescr;
@@ -109,11 +110,9 @@ import org.drools.compiler.rule.builder.RuleBuildContext;
 import org.drools.compiler.rule.builder.RuleBuilder;
 import org.drools.compiler.rule.builder.RuleConditionBuilder;
 import org.drools.compiler.rule.builder.dialect.DialectError;
-import org.drools.compiler.runtime.pipeline.impl.DroolsJaxbHelperProviderImpl;
 import org.drools.core.addon.TypeResolver;
 import org.drools.core.base.ClassFieldAccessorCache;
 import org.drools.core.builder.conf.impl.DecisionTableConfigurationImpl;
-import org.drools.core.builder.conf.impl.JaxbConfigurationImpl;
 import org.drools.core.definitions.InternalKnowledgePackage;
 import org.drools.core.definitions.impl.KnowledgePackageImpl;
 import org.drools.core.definitions.rule.impl.RuleImpl;
@@ -134,6 +133,7 @@ import org.drools.core.util.DroolsStreamUtils;
 import org.drools.core.util.IoUtils;
 import org.drools.core.util.StringUtils;
 import org.drools.core.xml.XmlChangeSetReader;
+import org.drools.reflective.ComponentsFactory;
 import org.drools.reflective.classloader.ProjectClassLoader;
 import org.kie.api.KieBase;
 import org.kie.api.KieBaseConfiguration;
@@ -188,7 +188,7 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
      */
     private final String defaultDialect;
 
-    private ClassLoader rootClassLoader;
+    private final ClassLoader rootClassLoader;
 
     private int parallelRulesBuildThreshold;
 
@@ -219,6 +219,8 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
     private Map<String, Object> builderCache;
 
     private ReleaseId releaseId;
+
+    private BuildContext buildContext;
 
     /**
      * Use this when package is starting from scratch.
@@ -314,14 +316,33 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
 
     private TypeDeclarationBuilder createTypeDeclarationBuilder() {
         TypeDeclarationBuilderFactory typeDeclarationBuilderFactory =
-                Optional.ofNullable(ServiceRegistry.getInstance().get(TypeDeclarationBuilderFactory.class))
+                Optional.ofNullable(ServiceRegistry.getService(TypeDeclarationBuilderFactory.class))
                         .orElse(new DefaultTypeDeclarationBuilderFactory());
 
         return typeDeclarationBuilderFactory.createTypeDeclarationBuilder(this);
     }
 
-    public void setReleaseId( ReleaseId releaseId ) {
+    public ReleaseId getReleaseId() {
+        return releaseId;
+    }
+
+    public void setReleaseId(ReleaseId releaseId ) {
         this.releaseId = releaseId;
+    }
+
+    public BuildContext getBuildContext() {
+        if (buildContext == null) {
+            buildContext = createBuildContext();
+        }
+        return buildContext;
+    }
+
+    protected BuildContext createBuildContext() {
+        return new BuildContext();
+    }
+
+    public void setBuildContext(BuildContext buildContext) {
+        this.buildContext = buildContext;
     }
 
     Resource getCurrentResource() {
@@ -380,7 +401,7 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
     }
 
     PackageDescr decisionTableToPackageDescr(Resource resource,
-                                             ResourceConfiguration configuration) throws DroolsParserException, IOException {
+                                             ResourceConfiguration configuration) throws DroolsParserException {
         DecisionTableConfiguration dtableConfiguration = configuration instanceof DecisionTableConfiguration ?
                 (DecisionTableConfiguration) configuration :
                 new DecisionTableConfigurationImpl();
@@ -463,7 +484,7 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         }
     }
 
-    protected static File createDumpDrlFile(File dumpDir, String fileName, String extension) {
+    public static File createDumpDrlFile(File dumpDir, String fileName, String extension) {
         return new File(dumpDir, fileName.replaceAll("[^a-zA-Z0-9\\.\\-_]+", "_") + extension);
     }
 
@@ -609,28 +630,6 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         return xmlReader.getPackageDescr();
     }
 
-    /**
-     * Load a rule package from DRL source using the supplied DSL configuration.
-     *
-     * @param source The source of the rules.
-     * @param dsl    The source of the domain specific language configuration.
-     * @throws DroolsParserException
-     * @throws IOException
-     */
-    public void addPackageFromDrl(final Reader source,
-                                  final Reader dsl) throws DroolsParserException,
-            IOException {
-        this.resource = new ReaderResource(source, ResourceType.DSLR);
-
-        final DrlParser parser = new DrlParser(configuration.getLanguageLevel());
-        final PackageDescr pkg = parser.parse(source, dsl);
-        this.results.addAll(parser.getErrors());
-        if (!parser.hasErrors()) {
-            addPackage(pkg);
-        }
-        this.resource = null;
-    }
-
     public void addPackageFromDslr(final Resource resource) throws DroolsParserException,
             IOException {
         this.resource = resource;
@@ -749,7 +748,7 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
             } else if (ResourceType.CHANGE_SET.equals(type)) {
                 addPackageFromChangeSet(resource);
             } else if (ResourceType.XSD.equals(type)) {
-                addPackageFromXSD(resource, (JaxbConfigurationImpl) configuration);
+                addPackageFromXSD(resource, configuration);
             } else if (ResourceType.SCARD.equals(type)) {
                 addPackageFromScoreCard(resource, configuration);
             } else if (ResourceType.TDRL.equals(type)) {
@@ -774,31 +773,24 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
     void addPackageForExternalType(Resource resource,
                                    ResourceType type,
                                    ResourceConfiguration configuration) throws Exception {
-        KieAssemblers assemblers = ServiceRegistry.getInstance().get(KieAssemblers.class);
+        KieAssemblers assemblers = ServiceRegistry.getService(KieAssemblers.class);
 
-        assemblers.addResource(this,
-                              resource,
-                              type,
-                              configuration);
+        assemblers.addResourceAfterRules(this,
+                               resource,
+                               type,
+                               configuration);
     }
 
     @Deprecated
     void addPackageForExternalType(ResourceType type, List<ResourceWithConfiguration> resources) throws Exception {
-        KieAssemblers assemblers = ServiceRegistry.getInstance().get(KieAssemblers.class);
+        KieAssemblers assemblers = ServiceRegistry.getService(KieAssemblers.class);
 
-        assemblers.addResources(this, resources, type);
+        assemblers.addResourcesAfterRules(this, resources, type);
     }
 
-    void addPackageFromXSD(Resource resource,
-                           JaxbConfigurationImpl configuration) throws IOException {
+    void addPackageFromXSD(Resource resource, ResourceConfiguration configuration) throws IOException {
         if (configuration != null) {
-            String[] classes = DroolsJaxbHelperProviderImpl.addXsdModel(resource,
-                                                                        this,
-                                                                        configuration.getXjcOpts(),
-                                                                        configuration.getSystemId());
-            for (String cls : classes) {
-                configuration.getClasses().add(cls);
-            }
+            ComponentsFactory.addPackageFromXSD( this, resource, configuration );
         }
     }
 
@@ -904,20 +896,20 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
     }
 
     /**
-     * This adds a package from a Descr/AST This will also trigger a compile, if
-     * there are any generated classes to compile of course.
+     * Adds a package from a Descr/AST also triggering its compilation
+     * and the generation of the corresponding rete/phreak network
      */
     @Override
     public void addPackage(final PackageDescr packageDescr) {
-        PackageRegistry pkgRegistry = getOrCreatePackageRegistry(packageDescr);
+        PackageRegistry pkgRegistry = getOrCreatePackageRegistry( packageDescr );
         if (pkgRegistry == null) {
             return;
         }
 
         // merge into existing package
-        mergePackage(pkgRegistry, packageDescr);
+        mergePackage(pkgRegistry, packageDescr );
 
-        compileKnowledgePackages(packageDescr, pkgRegistry);
+        compileKnowledgePackages( packageDescr, pkgRegistry);
         wireAllRules();
         compileRete(packageDescr);
     }
@@ -1025,6 +1017,13 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         return pkgRegistry;
     }
 
+    public void registerPackage(PackageDescr packageDescr) {
+        if (isEmpty(packageDescr.getNamespace())) {
+            packageDescr.setNamespace(this.configuration.getDefaultPackageName());
+        }
+        initPackage(packageDescr);
+    }
+
     private void initPackage(PackageDescr packageDescr) {
         //Gather all imports for all PackageDescrs for the current package and replicate into
         //all PackageDescrs for the current package, thus maintaining a complete list of
@@ -1115,8 +1114,8 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         }
     }
 
-    private static class ForkJoinPoolHolder {
-        private static ForkJoinPool COMPILER_POOL = new ForkJoinPool(); // avoid common pool
+    public static class ForkJoinPoolHolder {
+        public static final ForkJoinPool COMPILER_POOL = new ForkJoinPool(); // avoid common pool
     }
 
     private void compileRulesLevel(PackageDescr packageDescr, PackageRegistry pkgRegistry, List<RuleDescr> rules) {
@@ -1125,19 +1124,19 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
             Map<String, RuleBuildContext> ruleCxts = new ConcurrentHashMap<>();
             try {
                 ForkJoinPoolHolder.COMPILER_POOL.submit(() ->
-                rules.stream().parallel()
-                        .filter(ruleDescr -> filterAccepts(ResourceChange.Type.RULE, ruleDescr.getNamespace(), ruleDescr.getName()))
-                        .forEach(ruleDescr -> {
-                            initRuleDescr(packageDescr, pkgRegistry, ruleDescr);
-                            RuleBuildContext context = buildRuleBuilderContext(pkgRegistry, ruleDescr);
-                            ruleCxts.put(ruleDescr.getName(), context);
-                            List<? extends KnowledgeBuilderResult> results = addRule(context);
-                            if (!results.isEmpty()) {
-                            synchronized (this.results) {
-                                    this.results.addAll(results);
-                                }
-                            }
-                        })
+                                                                rules.stream().parallel()
+                                                                        .filter(ruleDescr -> filterAccepts(ResourceChange.Type.RULE, ruleDescr.getNamespace(), ruleDescr.getName()))
+                                                                        .forEach(ruleDescr -> {
+                                                                            initRuleDescr(packageDescr, pkgRegistry, ruleDescr);
+                                                                            RuleBuildContext context = buildRuleBuilderContext(pkgRegistry, ruleDescr);
+                                                                            ruleCxts.put(ruleDescr.getName(), context);
+                                                                            List<? extends KnowledgeBuilderResult> results = addRule(context);
+                                                                            if (!results.isEmpty()) {
+                                                                                synchronized (this.results) {
+                                                                                    this.results.addAll(results);
+                                                                                }
+                                                                            }
+                                                                        })
                 ).get();
             } catch (InterruptedException | ExecutionException e) {
                 throw new RuntimeException("Rules compilation failed or interrupted", e);
@@ -1296,7 +1295,7 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
 
         InternalKnowledgePackage pkg = pkgRegistry.getPackage();
 
-        List<RuleDescr> roots = new LinkedList<>();
+        List<RuleDescr> roots = new ArrayList<>();
         Map<String, List<RuleDescr>> children = new HashMap<>();
         LinkedHashMap<String, RuleDescr> sorted = new LinkedHashMap<>();
         List<RuleDescr> queries = new ArrayList<>();
@@ -1408,7 +1407,7 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
 
     private void manageUnresolvedExtension(RuleDescr ruleDescr,
                                            Collection<RuleDescr> candidates) {
-        List<String> candidateRules = new LinkedList<>();
+        List<String> candidateRules = new ArrayList<>();
         for (RuleDescr r : candidates) {
             if (StringUtils.stringSimilarity(ruleDescr.getParentName(), r.getName(), StringUtils.SIMILARITY_STRATS.DICE) >= 0.75) {
                 candidateRules.add(r.getName());
@@ -1646,14 +1645,14 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         normalizeRuleAnnotations(packageDescr, pkgRegistry.getTypeResolver());
     }
 
-    void processOtherDeclarations(PackageRegistry pkgRegistry, PackageDescr packageDescr) {
+    protected void processOtherDeclarations(PackageRegistry pkgRegistry, PackageDescr packageDescr) {
         processAccumulateFunctions(pkgRegistry, packageDescr);
         processWindowDeclarations(pkgRegistry, packageDescr);
         processFunctions(pkgRegistry, packageDescr);
         processGlobals(pkgRegistry, packageDescr);
     }
 
-    private void processGlobals(PackageRegistry pkgRegistry, PackageDescr packageDescr) {
+    protected void processGlobals(PackageRegistry pkgRegistry, PackageDescr packageDescr) {
         InternalKnowledgePackage pkg = pkgRegistry.getPackage();
         Set<String> existingGlobals = new HashSet<>(pkg.getGlobals().keySet());
 
@@ -1694,8 +1693,8 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         }
     }
 
-    private void processAccumulateFunctions(PackageRegistry pkgRegistry,
-                                            PackageDescr packageDescr) {
+    protected void processAccumulateFunctions(PackageRegistry pkgRegistry,
+                                              PackageDescr packageDescr) {
         for (final AccumulateImportDescr aid : packageDescr.getAccumulateImports()) {
             AccumulateFunction af = loadAccumulateFunction(pkgRegistry,
                                                            aid.getFunctionName(),
@@ -1710,11 +1709,11 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
                                                       String className) {
         try {
             Class<? extends AccumulateFunction> clazz = (Class<? extends AccumulateFunction>) pkgRegistry.getTypeResolver().resolveType(className);
-            return clazz.newInstance();
+            return clazz.getConstructor().newInstance();
         } catch (ClassNotFoundException e) {
             throw new RuntimeException("Error loading accumulate function for identifier " + identifier + ". Class " + className + " not found",
                                        e);
-        } catch (InstantiationException e) {
+        } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException("Error loading accumulate function for identifier " + identifier + ". Instantiation failed for class " + className,
                                        e);
         } catch (IllegalAccessException e) {
@@ -1723,8 +1722,8 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         }
     }
 
-    private void processFunctions(PackageRegistry pkgRegistry,
-                                  PackageDescr packageDescr) {
+    protected void processFunctions(PackageRegistry pkgRegistry,
+                                    PackageDescr packageDescr) {
         for (FunctionDescr function : packageDescr.getFunctions()) {
             Function existingFunc = pkgRegistry.getPackage().getFunctions().get(function.getName());
             if (existingFunc != null && function.getNamespace().equals(existingFunc.getNamespace())) {
@@ -1761,8 +1760,8 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         }
     }
 
-    private void processWindowDeclarations(PackageRegistry pkgRegistry,
-                                           PackageDescr packageDescr) {
+    protected void processWindowDeclarations(PackageRegistry pkgRegistry,
+                                             PackageDescr packageDescr) {
         for (WindowDeclarationDescr wd : packageDescr.getWindowDeclarations()) {
             WindowDeclaration window = new WindowDeclaration(wd.getName(), packageDescr.getName());
             // TODO: process annotations
@@ -1828,8 +1827,7 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
             String functionClassName = functionDescr.getClassName();
             JavaDialectRuntimeData runtime = ((JavaDialectRuntimeData) pkgRegistry.getDialectRuntimeRegistry().getDialectData("java"));
             try {
-                registerFunctionClassAndInnerClasses(functionClassName, runtime,
-                                                     (name, bytes) -> ((ProjectClassLoader) rootClassLoader).storeClass(name, bytes));
+                registerFunctionClassAndInnerClasses(functionClassName, runtime, ((ProjectClassLoader) rootClassLoader)::storeClass);
             } catch (ClassNotFoundException e) {
                 throw new RuntimeException(e);
             }
@@ -1997,11 +1995,11 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
      * there were errors on items that a rule depends on (eg functions), then
      * you will get spurious errors which will not be that helpful.
      */
-    protected void resetErrors() {
+    public void resetErrors() {
         resetProblemType(ResultSeverity.ERROR);
     }
 
-    protected void resetWarnings() {
+    public void resetWarnings() {
         resetProblemType(ResultSeverity.WARNING);
     }
 
@@ -2015,32 +2013,10 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         this.results.removeAll(toBeDeleted);
     }
 
-    protected void resetProblems() {
+    public void resetProblems() {
         this.results.clear();
         if (this.processBuilder != null) {
             this.processBuilder.getErrors().clear();
-        }
-    }
-
-    public String getDefaultDialect() {
-        return this.defaultDialect;
-    }
-
-    public static class MissingPackageNameException extends IllegalArgumentException {
-
-        private static final long serialVersionUID = 510L;
-
-        public MissingPackageNameException(final String message) {
-            super(message);
-        }
-    }
-
-    public static class PackageMergeException extends IllegalArgumentException {
-
-        private static final long serialVersionUID = 400L;
-
-        public PackageMergeException(final String message) {
-            super(message);
         }
     }
 
@@ -2395,14 +2371,27 @@ public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
         }
     }
 
+    public final void buildPackages( Collection<CompositePackageDescr> packages ) {
+        // this 2 build steps are called in sequence here, but are interleaved by processes and assemblers compilation
+        // during the build lifecycle of the CompositeKnowledgeBuilderImpl
+        doFirstBuildStep(packages);
+        doSecondBuildStep(packages);
+    }
+
     // composite build lifecycle
 
-    public void buildPackages( Collection<CompositePackageDescr> packages ) {
+    /**
+     * Performs the actual building of rules, but may be empty in subclasses
+     */
+    protected void doFirstBuildStep( Collection<CompositePackageDescr> packages ) {
         buildPackagesWithoutRules(packages);
         buildRules(packages);
     }
 
-    public void postBuild() { }
+    /**
+     * Used by subclasses that need to perform the build after the assemblers
+     */
+    protected void doSecondBuildStep( Collection<CompositePackageDescr> packages ) { }
 
     public void buildPackagesWithoutRules(Collection<CompositePackageDescr> packages ) {
         initPackageRegistries(packages);
